Initial plan to improve visuals

--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -186,6 +186,8 @@ Generate reports for:
 | Change history | All modifications with timestamps |
 :::
 
+![Audit evidence pipeline: Registration, Approval history, Documentation, Change history, Export for auditors](evidence-pipeline.svg){fig-alt="Horizontal flow diagram: Registration records, Approval history, Documentation, Change history, and Export for auditors, with ValidMind brand colors." width="90%"}
+
 ## Generating evidence {.center}
 
 To prepare for audits:
