--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -187,15 +187,7 @@ Use {{< var vm.product >}} to:
 
 ## AI governance lifecycle {.center}
 
-```{mermaid}
-graph LR
-    A[Intake] --> B[Assessment]
-    B --> C[Approval]
-    C --> D[Deployment]
-    D --> E[Monitoring]
-    E --> F[Review]
-    F --> B
-```
+![AI governance lifecycle: Intake, Assessment, Approval, Deployment, Monitoring, and Review with stakeholder roles and feedback loop](ai-governance-lifecycle.svg){fig-alt="Diagram showing the six-stage AI governance lifecycle: Intake (use case owner), Assessment (governance/risk), Approval (committee/compliance) highlighted in magenta, Deployment (owner/IT), Monitoring (risk/ops), Review (governance/audit), with a dashed arrow from Review back to re-assess or re-approve." .screenshot}
 
 ## Managing stage transitions {.center}
 
