--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -71,13 +71,15 @@ It sets:
 - Lifecycle controls
 - Ongoing oversight
 
+![AI governance pillars: Policy, Accountability, Lifecycle, Oversight](governance-pillars.svg){fig-alt="Four blocks showing governance pillars: Policy and standards, Accountability and decision rights, Lifecycle controls highlighted in magenta, and Oversight ongoing." width="65%"}
+
 ## Unit of management {.center}
 
 In AI governance, the primary unit of management is the **AI system** or **AI use case** — not the individual model.
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **AI governance focuses on:**
 
 - How AI is used
@@ -85,7 +87,7 @@ In AI governance, the primary unit of management is the **AI system** or **AI us
 - Organizational accountability
 :::
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Applies to:**
 
 - Model-based AI
@@ -95,17 +97,19 @@ In AI governance, the primary unit of management is the **AI system** or **AI us
 
 ::::
 
-# AI governance vs MRM {background-image="../assets/digitalspace-colours.svg"}
+# {{< fa scale-balanced >}} AI governance vs MRM {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Parallel use cases {.center}
 
 AI governance and model risk management (MRM) are **parallel use cases** — not subsets of each other.
 
+::: {.f2}
 | Aspect | AI Governance | MRM |
 |--------|---------------|-----|
 | Unit of management | AI system / use case | Model |
 | Objective | Organizational oversight | Technical risk control |
 | Scope | Broad — ethics, compliance | Narrow — performance, validation |
+:::
 
 ## Relationship {.center}
 
@@ -118,7 +122,9 @@ The overlap may produce shared artifacts:
 - Monitoring evidence
 - Issue tracking
 
-Organizations may coordinate these use cases or manage them separately.
+![AI governance and MRM as parallel use cases with overlapping shared artifacts](ai-governance-mrm-overlap.svg){fig-alt="Two overlapping ellipses: AI Governance (AI system, organizational oversight, broad) and MRM (model, technical risk control, narrow), with a central overlap zone labeled Shared artifacts: inventory, approvals, monitoring, issues." width="75%"}
+
+Organizations may coordinate these use cases or manage them separately. {{< var vm.product >}} supports both: the same inventory can represent AI use cases for governance or models for MRM, depending on configuration.
 
 # Key terminology {background-image="../assets/digitalspace-colours.svg"}
 
@@ -126,7 +132,7 @@ Organizations may coordinate these use cases or manage them separately.
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Units of oversight:**
 
 - AI system
@@ -135,7 +141,7 @@ Organizations may coordinate these use cases or manage them separately.
 - Automated decision system
 :::
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Risk framing:**
 
 - AI risk
@@ -150,7 +156,7 @@ Organizations may coordinate these use cases or manage them separately.
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Classification:**
 
 - Risk tier
@@ -159,7 +165,7 @@ Organizations may coordinate these use cases or manage them separately.
 - Prohibited / high-risk / limited-risk
 :::
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Lifecycle:**
 
 - Intake
@@ -185,6 +191,7 @@ Organizations may coordinate these use cases or manage them separately.
 - **Custom fields** — Configure risk tiers, impact levels, ownership
 - **Workflows** — Intake, approval, and deployment processes
 - **Documentation** — Generate governance documentation
+- **Document Checker** — Assess model documentation against regulatory question sets (SR 11-7, SS1/23, E-23, EU AI Act)
 - **Dashboards** — Monitor compliance across your portfolio
 :::
 :::
