--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -173,14 +173,14 @@ Set up periodic review workflows:
 3. Track review completion
 4. Escalate overdue reviews
 
-# Escalations {background-image="../assets/digitalspace-colours.svg"}
+# {{< fa arrow-turn-up >}} Escalations {background-image="../assets/digitalspace-colours.svg"}
 
 ## Escalation paths {.center}
 
 Configure escalations for:
 
 - Overdue approvals
-- High-risk findings
+- High-risk validation issues
 - Policy violations
 - Compliance incidents
 
