--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -56,7 +56,7 @@ This fourth module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Regulatory mapping {background-image="../assets/digitalspace-colours.svg"}
+# Regulatory mapping {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Understanding requirements {.center}
 
@@ -130,7 +130,7 @@ Use our implementation guides for:
 - [SS1/23](/about/use-cases/ss1-23.qmd){target="_blank" .button}
 - [E-23](/about/use-cases/e-23.qmd){target="_blank" .button} -->
 
-# Dashboards and reporting {background-image="../assets/digitalspace-colours.svg"}
+# Dashboards and reporting {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Governance dashboards {.center}
 
@@ -171,7 +171,7 @@ Generate reports for:
 - Internal audit
 - Compliance monitoring
 
-# Audit evidence {background-image="../assets/digitalspace-colours.svg"}
+# Audit evidence {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Types of audit evidence {.center}
 
@@ -206,7 +206,7 @@ Best practices:
 - Document decisions and rationale
 - Perform periodic self-assessments
 
-# Continuous compliance {background-image="../assets/digitalspace-colours.svg"}
+# Continuous compliance {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Ongoing monitoring {.center}
 
