--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -56,7 +56,7 @@ This second module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Use case inventories {background-image="../assets/digitalspace-colours.svg"}
+# Use case inventories {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## What is a use case inventory? {.center}
 
@@ -111,7 +111,7 @@ The **{{< fa cubes >}} Inventory** displays AI use cases with:
 
 ::::
 
-# Risk classification {background-image="../assets/digitalspace-colours.svg"}
+# Risk classification {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Why classify risk? {.center}
 
@@ -153,7 +153,7 @@ In {{< var vm.product >}}, you can:
 
 ::::
 
-# Impact assessments {background-image="../assets/digitalspace-colours.svg"}
+# Impact assessments {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Purpose of impact assessments {.center}
 
@@ -183,7 +183,7 @@ Use {{< var vm.product >}} to:
 - Route assessments through approval workflows
 - Maintain audit trail of governance decisions
 
-# Lifecycle stages {background-image="../assets/digitalspace-colours.svg"}
+# Lifecycle stages {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## AI governance lifecycle {.center}
 
