--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -57,30 +57,32 @@ This first module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# What is AI governance? {background-image="../assets/digitalspace-colours.svg"}
+# What is AI governance? {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Defining AI governance {.center}
 
-AI governance is the **organizational framework** for directing and overseeing how AI is designed, deployed, and used.
+::: {.f2}
+AI governance is the **organizational framework** for directing and overseeing how AI is designed, deployed, and used. It sets:
 
-It sets:
+[{{< fa check >}}]{.dark-pink}&ensp;Policy and standards
 
-- Policy and standards
-- Accountability and decision rights
-- Ethics and compliance requirements
-- Lifecycle controls
-- Ongoing oversight
+[{{< fa check >}}]{.dark-pink}&ensp;Accountability and decision rights
 
-![AI governance pillars: Policy, Accountability, Lifecycle, Oversight](governance-pillars.svg){fig-alt="Four blocks showing governance pillars: Policy and standards, Accountability and decision rights, Lifecycle controls highlighted in magenta, and Oversight ongoing." width="65%"}
+[{{< fa check >}}]{.dark-pink}&ensp;Lifecycle controls
+
+[{{< fa check >}}]{.dark-pink}&ensp;Ongoing oversight
+:::
+
 
 ## Unit of management {.center}
 
+::: {.f2}
 In AI governance, the primary unit of management is the **AI system** or **AI use case** — not the individual model.
 
-:::: {.flex .flex-wrap .justify-around}
+:::: {.flex .flex-wrap .justify-around .mt4}
 
 ::: {.w-40-ns .content-block-teal}
-**AI governance focuses on:**
+**Focuses on:**
 
 - How AI is used
 - Impact on stakeholders
@@ -97,13 +99,15 @@ In AI governance, the primary unit of management is the **AI system** or **AI us
 
 ::::
 
-# {{< fa scale-balanced >}} AI governance vs MRM {background-image="../assets/digitalspace-colours.svg" .title-accent}
+:::
+
+# AI governance vs MRM {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Parallel use cases {.center}
 
+::: {.f2}
 AI governance and model risk management (MRM) are **parallel use cases** — not subsets of each other.
 
-::: {.f2}
 | Aspect | AI Governance | MRM |
 |--------|---------------|-----|
 | Unit of management | AI system / use case | Model |
@@ -122,11 +126,11 @@ The overlap may produce shared artifacts:
 - Monitoring evidence
 - Issue tracking
 
-![AI governance and MRM as parallel use cases with overlapping shared artifacts](ai-governance-mrm-overlap.svg){fig-alt="Two overlapping ellipses: AI Governance (AI system, organizational oversight, broad) and MRM (model, technical risk control, narrow), with a central overlap zone labeled Shared artifacts: inventory, approvals, monitoring, issues." width="75%"}
+![AI governance and MRM as parallel use cases with overlapping shared artifacts](../assets/ai-governance-mrm-overlap.svg){fig-alt="Diagram: AI Governance and MRM as overlapping circles with shared artifacts in the overlap." width="75%"}
 
 Organizations may coordinate these use cases or manage them separately. {{< var vm.product >}} supports both: the same inventory can represent AI use cases for governance or models for MRM, depending on configuration.
 
-# Key terminology {background-image="../assets/digitalspace-colours.svg"}
+# Key terminology {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## AI governance terms {.center}
 
@@ -177,7 +181,7 @@ Organizations may coordinate these use cases or manage them separately. {{< var 
 
 ::::
 
-# Platform orientation {background-image="../assets/digitalspace-colours.svg"}
+# Platform orientation {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## {{< var vm.product >}} for AI governance {.center}
 
