--- a/site/training/ai-governance/ai-governance-register.qmd
+++ b/site/training/ai-governance/ai-governance-register.qmd
@@ -52,7 +52,7 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 ::: {.attn}
 ## In this course
 
-:::: {.flex .flex-wrap .justify-around}
+:::: {.flex .flex-wrap .justify-around .mt4}
 
 ::: {.w-50-ns .pr3}
 #### Total duration
