--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -107,9 +107,11 @@ In AI governance, the primary unit of management is the **AI system** or **AI us
 
 ::: {.f2}
 AI governance and model risk management (MRM) are **parallel use cases** — not subsets of each other.
+:::
 
+::: {.f3 .mt4}
 | Aspect | AI Governance | MRM |
-|--------|---------------|-----|
+|----|-------|-------|
 | Unit of management | AI system / use case | Model |
 | Objective | Organizational oversight | Technical risk control |
 | Scope | Broad — ethics, compliance | Narrow — performance, validation |
@@ -117,24 +119,33 @@ AI governance and model risk management (MRM) are **parallel use cases** — not
 
 ## Relationship {.center}
 
-AI governance and MRM **overlap** for machine learning models embedded in AI systems.
+::: {.f2}
+AI governance and MRM may also **overlap** with some shared artifacts:
 
-The overlap may produce shared artifacts:
+:::: {.columns}
 
-- Inventories
-- Approvals
-- Monitoring evidence
+::: {.column width="40%"}
+- Inventory
+- Approval workflows
 - Issue tracking
+- Ongoing monitoring
+:::
 
-![AI governance and MRM as parallel use cases with overlapping shared artifacts](../assets/ai-governance-mrm-overlap.svg){fig-alt="Diagram: AI Governance and MRM as overlapping circles with shared artifacts in the overlap." width="75%"}
+::: {.column width="60%" .f3 .tc .nt3}
+![](ai-governance-mrm-overlap.svg){width="100%" fig-alt="Diagram: AI Governance and MRM as overlapping circles with shared artifacts in the overlap."}
+:::
 
-Organizations may coordinate these use cases or manage them separately. {{< var vm.product >}} supports both: the same inventory can represent AI use cases for governance or models for MRM, depending on configuration.
+::::
+
+Organizations can coordinate these use cases or manage them separately. **{{< var vm.product >}} supports both approaches**.
+
+:::
 
 # Key terminology {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## AI governance terms {.center}
 
-:::: {.flex .flex-wrap .justify-around}
+:::: {.flex .flex-wrap .justify-around .mt4}
 
 ::: {.w-40-ns .content-block-teal}
 **Units of oversight:**
@@ -158,7 +169,7 @@ Organizations may coordinate these use cases or manage them separately. {{< var 
 
 ## Classification and lifecycle {.center}
 
-:::: {.flex .flex-wrap .justify-around}
+:::: {.flex .flex-wrap .justify-around .mt4}
 
 ::: {.w-40-ns .content-block-teal}
 **Classification:**
@@ -187,21 +198,23 @@ Organizations may coordinate these use cases or manage them separately. {{< var 
 
 :::: {.columns}
 
-::: {.column width="50%" .pr3}
+::: {.column width="50%" .pr3 .f2}
 {{< var vm.product >}} supports AI governance through:
 
 ::: {.f3}
-- **Inventory** — Track AI systems and use cases
-- **Custom fields** — Configure risk tiers, impact levels, ownership
-- **Workflows** — Intake, approval, and deployment processes
-- **Documentation** — Generate governance documentation
-- **Document Checker** — Assess model documentation against regulatory question sets (SR 11-7, SS1/23, E-23, EU AI Act)
-- **Dashboards** — Monitor compliance across your portfolio
+- **Inventory** — Track AI systems use cases, owners, stakeholders, and more
+- **Custom fields** — Configure risk tiers, impact levels, and more
+- **Workflows** — Intake, approval, and lifecycle processes
+- **Documentation** — Run testing and generate documentation
+- **Validation** - Identify and track issues
+- **Dashboards** — Monitor compliance
 :::
 :::
 
-::: {.column width="50%" .pl3 .pt4}
+::: {.column width="50%" .pl3 .pt3 .f3}
 ![The Inventory](inventory-overview.png){fig-alt="A screenshot of the ValidMind Platform showing the main interface" .screenshot .tilt-left}
+
+- **Document Checker** — Assess model documentation against regulations and internal policies
 :::
 
 ::::
