--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -65,15 +65,15 @@ To upload a PDF and convert it into an editable model document:
 
 4. Click on the document you want to add content to.
 
-5. Under [start your document]{.smallcaps}, select **Upload PDF**.
+5. Under [start your document]{.smallcaps}, select **Upload a file**.
 
-6. Drag and drop your `.pdf` file into the upload area, or click **choose your file** to browse for it.
+6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to browse for it.
 
 ::: {.callout title="Only a single PDF file can be uploaded at a time."}
-If you need to upload a different PDF, remove the current file first before selecting a new one.
+If you need to upload a different PDF, click **Remove** to clear the current file before selecting a new one.
 :::
 
-7. Click **Upload & Convert** to begin the conversion.
+7. Click **Upload and Convert** to begin the conversion.
 
     A progress banner appears at the top of the document page indicating that conversion is in progress.
 
@@ -85,7 +85,7 @@ If you need to stop an in-progress conversion:
 
 1. While the conversion progress banner is displayed, click **Cancel**.
 
-2. In the confirmation dialog, optionally enable the toggle to also delete the uploaded PDF file.
+2. In the confirmation dialog, optionally enable the **Delete file from this document** toggle to also remove the uploaded PDF file.
 
 3. Click **Cancel Conversion** to confirm.
 
@@ -101,13 +101,13 @@ To upload a PDF without converting it to an editable template:
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
-4. Click **{{< fa plus >}} Create Document**.
+4. Click on the document you want to add content to.
 
-5. Enter the document details and select **Upload PDF** as the document source.
+5. Under [start your document]{.smallcaps}, select **Upload a file**.
 
-6. Drag and drop your `.pdf` file into the upload area, or click **choose your file** to browse for it.
+6. Drag and drop a `.pdf` file into the upload area, or click **choose a file** to browse for it.
 
-7. Click **Upload** to attach the PDF to the document.
+7. Click **Upload Only** to attach the PDF to the document.
 
     The PDF is stored as a static file. You can view it within {{< var validmind.platform >}} but you cannot edit its contents.
 
