--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -60,23 +60,26 @@ This third module is part of a four-part series:
 
 ## What is an intake workflow? {.center}
 
-Intake workflows control how new AI systems enter your governance program.
+Intake workflows **control** how new AI systems enter your governance program. They ensure:
 
-They ensure:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; All AI systems are registered
 
-- All AI systems are registered
-- Required information is captured
-- Initial classification is performed
-- Ownership is assigned
+[{{< fa check >}}]{.dark-pink} &ensp; Required information is captured
+
+[{{< fa check >}}]{.dark-pink} &ensp; Initial classification is performed
+
+[{{< fa check >}}]{.dark-pink} &ensp; Ownership is assigned
+:::
 
 ## Configuring intake {.center}
 
 In {{< var vm.product >}}:
 
-1. Define required fields for registration
-2. Set up validation rules
-3. Configure automatic notifications
-4. Route new registrations for review
+1. **Define** required fields for registration
+2. **Set up** validation rules
+3. **Configure** automatic notifications
+4. **Route** new registrations for review
 
 ## [Example: Risk classification workflow]{.f2} {.center .tc}
 
@@ -102,20 +105,23 @@ This example intake workflow demonstrates key AI governance patterns:
 
 ## Purpose of approval workflows {.center}
 
-Approval workflows ensure AI systems receive appropriate review before deployment.
+Approval workflows **ensure** AI systems receive appropriate review before deployment. They implement:
 
-They implement:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Risk-based approval gates
 
-- Risk-based approval gates
-- Multiple approver requirements
-- Segregation of duties
-- Documented decision-making
+[{{< fa check >}}]{.dark-pink} &ensp; Multiple approver requirements
+
+[{{< fa check >}}]{.dark-pink} &ensp; Segregation of duties
+
+[{{< fa check >}}]{.dark-pink} &ensp; Documented decision-making
+:::
 
 ## Designing approval flows {.center}
 
 Consider these design principles:
 
-::: {.f2}
+::: {.f2 .mt4}
 | Risk level | Approval requirements |
 |------------|----------------------|
 | High-risk | Multiple approvers, governance committee |
@@ -136,7 +142,7 @@ Consider these design principles:
 - Approval deadline tracking
 :::
 
-::: {.column width="50%" .pl3}
+::: {.column width="50%" .pl3 .f3 .mt3}
 ![Approval step configuration](workflow-approval-step-configuration.png){fig-alt="A screenshot showing approval step configuration with role selection in the workflow builder" .screenshot .tilt-left}
 :::
 
@@ -146,32 +152,35 @@ Consider these design principles:
 
 ## Regulatory context {.center}
 
-The EU AI Act (Article 14) requires human oversight for high-risk AI systems.
+The EU AI Act (Article 14) **requires** human oversight** for high-risk AI systems. Human oversight includes:
 
-Human oversight includes:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Ability to understand AI outputs
 
-- Ability to understand AI outputs
-- Capability to intervene
-- Authority to override decisions
-- Mechanisms for feedback
+[{{< fa check >}}]{.dark-pink} &ensp; Capability to intervene
+
+[{{< fa check >}}]{.dark-pink} &ensp; Authority to override decisions
+
+[{{< fa check >}}]{.dark-pink} &ensp; Mechanisms for feedback
+:::
 
 ## Implementing oversight {.center}
 
 Use {{< var vm.product >}} to document and enforce oversight:
 
-- Record oversight requirements in documentation
-- Configure review workflows for AI outputs
-- Track intervention decisions
-- Maintain evidence of human involvement
+- **Record** oversight requirements in documentation
+- **Configure** review workflows for AI outputs
+- **Track** intervention decisions
+- **Maintain** evidence of human involvement
 
 ## Review workflows {.center}
 
 Set up periodic review workflows:
 
-1. Define review frequency by risk tier
-2. Configure reviewer assignments
-3. Track review completion
-4. Escalate overdue reviews
+1. **Define** review frequency by risk tier
+2. **Configure** reviewer assignments
+3. **Track** review completion
+4. **Escalate** overdue reviews
 
 # Escalations {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
@@ -179,10 +188,15 @@ Set up periodic review workflows:
 
 Configure escalations for:
 
-- Overdue approvals
-- High-risk validation issues
-- Policy violations
-- Compliance incidents
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Overdue approvals
+
+[{{< fa check >}}]{.dark-pink} &ensp; High-risk validation issues
+
+[{{< fa check >}}]{.dark-pink} &ensp; Policy violations
+
+[{{< fa check >}}]{.dark-pink} &ensp; Compliance incidents
+:::
 
 Escalation ensures issues reach appropriate decision-makers.
 
