Edits, convert .mp4 files to animated gifs

--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -62,7 +62,7 @@ This fourth module is part of a four-part series:
 
 Key governance regulations include:
 
-::: {.f2}
+::: {.f2 .mt4}
 | Regulation | Jurisdiction | Focus |
 |------------|--------------|-------|
 | [EU AI Act](https://eur-lex.europa.eu/eli/reg/2024/1689){target="_blank"} | European Union | Risk-based AI regulation |
@@ -87,7 +87,7 @@ Each regulation maps to platform capabilities:
 ::: {.column width="50%" .pl3 .pr3}
 
 ::: {.pl4 .mb4}
- ![](/assets/img/bevalid-check.svg){style="height: 1em; vertical-align: bottom;"} [Put Governance into Practice]{.f1 .b style="color: #DE257E;"}
+[Put Governance into Practice]{.f1 .b style="color: #DE257E;"}
 
 ::: {.f3}
 Use our implementation guides for:
@@ -147,7 +147,7 @@ Dashboards provide visibility into:
 :::
 :::
 
-::: {.column width="50%" .pl3 .mt5}
+::: {.column width="50%" .pl3 .mt5 .f3}
 ![Analytics dashboard](analytics-dashboard.png){fig-alt="A screenshot showing the ValidMind Analytics view with portfolio overview and compliance metrics" .screenshot .tilt-left}
 :::
 
@@ -155,21 +155,41 @@ Dashboards provide visibility into:
 
 ## Configuring dashboards {.center}
 
-The **{{< fa chart-line >}} Analytics** section provides:
+The **Analytics** section provides:
 
-- Pre-built dashboards for governance oversight
-- Customizable widgets for key metrics
-- Filters by risk tier, status, and ownership
-- Export options for board reporting
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Pre-built dashboards for governance oversight
+
+[{{< fa check >}}]{.dark-pink} &ensp; Customizable widgets for key metrics
+
+[{{< fa check >}}]{.dark-pink} &ensp; Filters by risk tier, status, and ownership
+
+[{{< fa check >}}]{.dark-pink} &ensp; Export options for board reporting
+:::
 
 ## Reporting {.center}
 
 Generate reports for:
 
-- Board and executive oversight
-- Regulatory submissions
-- Internal audit
-- Compliance monitoring
+:::: {.flex .flex-wrap .justify-around .mt4}
+
+::: {.w-40-ns .content-block-teal .mb3}
+**Executive oversight**
+:::
+
+::: {.w-40-ns .content-block-teal .mb3}
+**Regulatory submissions**
+:::
+
+::: {.w-40-ns .content-block-teal .mt3}
+**Internal & external audits**
+:::
+
+::: {.w-40-ns .content-block-teal .mt3}
+**Compliance monitoring**
+:::
+
+::::
 
 # Audit evidence {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
@@ -177,7 +197,7 @@ Generate reports for:
 
 {{< var vm.product >}} automatically captures:
 
-::: {.f2}
+::: {.f2 .mt4}
 | Evidence type | Description |
 |--------------|-------------|
 | Registration records | AI system registration and updates |
@@ -186,25 +206,28 @@ Generate reports for:
 | Change history | All modifications with timestamps |
 :::
 
-![Audit evidence pipeline: Registration, Approval history, Documentation, Change history, Export for auditors](evidence-pipeline.svg){fig-alt="Horizontal flow diagram: Registration records, Approval history, Documentation, Change history, and Export for auditors, with ValidMind brand colors." width="90%"}
-
 ## Generating evidence {.center}
 
 To prepare for audits:
 
-1. Export documentation and reports
-2. Generate activity logs
-3. Produce compliance summaries
-4. Package evidence for auditors
+1. **Export** documentation and reports
+2. **Generate** activity logs
+3. **Produce** compliance summaries
+4. **Package** evidence for auditors
 
 ## Maintaining audit readiness {.center}
 
 Best practices:
 
-- Keep documentation current
-- Complete workflows promptly
-- Document decisions and rationale
-- Perform periodic self-assessments
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Keep documentation current
+
+[{{< fa check >}}]{.dark-pink} &ensp; Complete workflows promptly
+
+[{{< fa check >}}]{.dark-pink} &ensp; Document decisions and rationale
+
+[{{< fa check >}}]{.dark-pink} &ensp; Perform periodic self-assessments
+:::
 
 # Continuous compliance {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
@@ -243,7 +266,7 @@ Configure periodic reviews:
 
 :::
 
-::: {.column width="45%" .pl3 .tr .nt3 .tilt-left}
+::: {.column width="45%" .pl3 .tr .nt3 .tilt-left .f3}
 ![Periodic review workflow](workflows-periodic-review.png){fig-alt="A screenshot showing the ValidMind Periodic Review workflow with frequency, reviewer assignments, completion tracking, and document outcomes" .screenshot}
 :::
 
@@ -251,23 +274,31 @@ Configure periodic reviews:
 
 ## Staying current {.center}
 
-AI regulations evolve. Stay current by:
+AI regulations **evolve**. Stay current by:
 
-- Monitoring regulatory updates
-- Updating classification criteria
-- Revising documentation templates
-- Training staff on changes
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Monitoring regulatory updates
+
+[{{< fa check >}}]{.dark-pink} &ensp; Updating classification criteria
+
+[{{< fa check >}}]{.dark-pink} &ensp; Revising documentation templates
+
+[{{< fa check >}}]{.dark-pink} &ensp; Training staff on changes
+:::
 
 ## Course completion {.center}
 
-Congratulations on completing **AI Governance**!
+Congratulations on completing **AI Governance**! You have learned:
 
-You have learned:
+::: {.mt4 .f2 .mb4}
+[{{< fa check >}}]{.dark-pink} &ensp; AI governance concepts and terminology
 
-- AI governance concepts and terminology
-- How to manage AI use cases
-- Workflow configuration for governance
-- Compliance and oversight practices
+[{{< fa check >}}]{.dark-pink} &ensp; How to manage AI use cases
+
+[{{< fa check >}}]{.dark-pink} &ensp; Workflow configuration for governance
+
+[{{< fa check >}}]{.dark-pink} &ensp; Compliance and oversight practices
+:::
 
 ::: {.tc}
 [Return to AI Governance](ai-governance-register.qmd){.button target="_blank"}
