--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -91,7 +91,7 @@ Configure custom inventory fields for AI governance:
 :::
 
 ::: {.column width="50%" .pl3 .tilt-left}
-{{< video src="custom-fields.mp4" title="ConfigureCustom fields configuration" fig-alt="A short video showing custom field configuration in ValidMind settings">}}
+![A short video showing custom field configuration in ValidMind settings](custom-fields.gif)
 :::
 
 ::::
@@ -101,7 +101,7 @@ Configure custom inventory fields for AI governance:
 :::: {.columns}
 
 ::: {.column width="60%" .pr3 .tilt-right .mt5}
-{{< video src="intentory-in-action.mp4" title="The inventory in action" fig-alt="A short video showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields">}}
+![A short video showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields](intentory-in-action.gif)
 :::
 
 ::: {.column width="40%" .pl3 .nt2 .f2}
