--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -79,7 +79,7 @@ A centralized registry of all AI systems and their purposes, use case inventorie
 ::: {.column width="50%" .pr3 .f2}
 Configure custom inventory fields for AI governance:
 
-::: {.f4 .mt4}
+::: {.f4 .mt5}
 | Field type | Examples |
 |------------|----------|
 | Classification | Risk tier, impact level |
@@ -90,8 +90,8 @@ Configure custom inventory fields for AI governance:
 
 :::
 
-::: {.column width="50%" .pl3 .tilt-left}
-![A short video showing custom field configuration in ValidMind settings](custom-fields.gif)
+::: {.column width="50%" .pl3 .tilt-left .f3}
+![Custom field configuration](custom-fields.gif){fig-alt="A short video showing custom field configuration in ValidMind settings" .screenshot}
 :::
 
 ::::
@@ -100,8 +100,8 @@ Configure custom inventory fields for AI governance:
 
 :::: {.columns}
 
-::: {.column width="60%" .pr3 .tilt-right .mt5}
-![A short video showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields](intentory-in-action.gif)
+::: {.column width="60%" .pr3 .tilt-right .mt5 .f3}
+![The ValidMind inventory](intentory-in-action.gif){fig-alt="A short video showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields" .screenshot}
 :::
 
 ::: {.column width="40%" .pl3 .nt2 .f2}
